fixed spacing issue

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -116,7 +116,7 @@
 	margin-bottom: 0.5rem;
 }
 
-.project2, .project4 {
+.project2, .project3, .project4 {
 	margin-top: 5rem;
 }
 
